<resources>
    <string name="app_name">sd5g</string>
    <string name="setting">设置</string>
    <string name="refresh">重新加载</string>
    <string name="clear">清除缓存</string>
    <string name="unread_msg">未读消息</string>
    <string name="msg_manager">消息管理</string>
    <string name="logout">退出登录</string>
    <string name="home">首页</string>

    <string name="network_error">请检查网络</string>

    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string-array name="mainPopupMenu">
        <item>@string/unread_msg</item>
        <item>@string/msg_manager</item>
        <item>@string/home</item>
        <item>@string/setting</item>
        <item>@string/clear</item>
        <item>@string/logout</item>
        <item>@string/refresh</item>
    </string-array>

    <string name="app_tip">提示</string>
    <string name="pay_by_wx">通过微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <string name="no_http_tips">请填写正确的协议</string>
    <string name="button_save_text">保存</string>
    <string name="button_ok_text">确定</string>
    <string name="button_cancel_text">取消</string>
    <string name="button_delete_text">删除</string>
    <string name="num_modify">修改数量</string>
    <string name="button_keyboard_text">键盘</string>
    <string name="label_account">用户帐号：</string>
    <string name="label_password">登录密码：</string>
    <string name="button_login_text">登录系统</string>
    <string name="label_save">记住密码（专用手机可选择）</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
</resources>
